Fixed overflow

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body{
         grid-row: 1;
         grid-column: 1;
         min-height: 40vh;
-        height: 40vh;
+        height: 40ch;
         object-fit: cover;
     }
 }
